	  config_set_option.
	- auth zone http download stores exact copy of downloaded file,
	  including comments in the file.
	- Fix sldns parse failure for CDS alternate delete syntax empty hex.
	- Attempt for auth zone fix; add of callback in mesh gets from
	  callback does not skip callback of result.
	- Fix cname classification with qname minimisation enabled.

20 April 2018: Wouter
	- man page documentation for dns-over-tls forward-addr '#' notation.
	- removed free from failed parse case.
	- Fix #4091: Fix that reload of auth-zone does not merge the zonefile
	  with the previous contents.
	- Delete auth zone when removed from config.

19 April 2018: Wouter
	- Can set tls authentication with forward-addr: IP#tls.auth.name
	  And put the public cert bundle in tls-cert-bundle: "ca-bundle.pem".
	  such as forward-addr: 9.9.9.9@853#dns.quad9.net or
	  1.1.1.1@853#cloudflare-dns.com
	- Fix #658: unbound using TLS in a forwarding configuration does not
	  verify the server's certificate (RFC 8310 support).
	- For addr with #authname and no @port notation, the default is 853.

18 April 2018: Wouter
	- Fix auth-zone retry timer to be on schedule with retry timeout,
	  with backoff.  Also time a refresh at the zone expiry.

17 April 2018: Wouter
	- auth zone notify work.
	- allow-notify: config statement for auth-zones.
	- unit test for allow-notify

16 April 2018: Wouter
	- Fix auth zone target lookup iterator.
	- auth zone notify with prefix
	- auth zone notify work.

13 April 2018: Wouter
	- Fix for max include depth for authzones.
	- Fix memory free on fail for $INCLUDE in authzone.
	- Fix that an internal error to look up the wrong rr type for
	  auth zone gets stopped, before trying to send there.
	- auth zone notify work.

10 April 2018: Ralph
	- num.query.aggressive.NOERROR and num.query.aggressive.NXDOMAIN
	  statistics counters.

10 April 2018: Wouter
	- documentation for low-rtt and low-rtt-pct.
	- auth zone notify work.

9 April 2018: Wouter